docs(website): improved article coming soon note

--- a/documentation/serenity-js.org/docs/reporting/domain-events.mdx
+++ b/documentation/serenity-js.org/docs/reporting/domain-events.mdx
@@ -10,4 +10,4 @@ import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
 
 <ArticleComingSoon />
 
-See available [`DomainEvents`](/api/core-events/class/DomainEvent).
+Learn more about the [`DomainEvents`](/api/core-events/class/DomainEvent), recognised by Serenity/JS [stage crew members](/api/core/interface/StageCrewMember).
