docs(website): finished documenting reporting services

--- a/documentation/serenity-js.org/docs/getting-started.mdx
+++ b/documentation/serenity-js.org/docs/getting-started.mdx
@@ -19,7 +19,7 @@ They are the easiest way to get started with the framework, as every Serenity/JS
 In fact, all Serenity/JS tutorials you'll find in this handbook have a corresponding Serenity/JS Gitpod that lets you follow the tutorial without having to install anything on your machine. If you prefer to set up Serenity/JS locally, this handbook will also teach you how to do that.
 
 :::info Pro tip
-To quickly see what Serenity/JS is capable of, go straight to the first tutorial where you'll learn how to use Serenity/JS and Playwright Test to [write test scenarios for Web applications](/handbook/web-testing/your-first-web-scenario).
+To quickly see what Serenity/JS is capable of, go straight to the first tutorial where you'll learn how to use Serenity/JS and Playwright Test to [write test scenarios for web applications](/handbook/web-testing/your-first-web-scenario).
 :::
 
 To use Serenity/JS Gitpods, you'll need a [free account on GitHub.com](#your-githubcom-account).
