--- a/documentation/serenity-js.org/docs/reporting/console-reporter.mdx
+++ b/documentation/serenity-js.org/docs/reporting/console-reporter.mdx
@@ -28,7 +28,7 @@ You might also want to explore [Serenity/JS example projects on GitHub](https://
 
 ## Integration
 
-[`ConsoleReporter`](/api/console-reporter/class/ConsoleReporter) listens to [domain events](/handbook/reporting/domain-events) emitted by [`Actors`](/api/core/class/Actor) and [Serenity/JS test runner adapters](/handbook/test-runners/).
+[`ConsoleReporter`](/api/console-reporter/class/ConsoleReporter) listens to [domain events](/handbook/reporting/domain-events) emitted by [actors](/api/core/class/Actor) and [Serenity/JS test runner adapters](/handbook/test-runners/).
 
 ```mermaid
 graph TB
