--- a/documentation/serenity-js.org/docs/reporting/stream-reporter.mdx
+++ b/documentation/serenity-js.org/docs/reporting/stream-reporter.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 5
+sidebar_position: 6
 ---
 
 # Stream Reporter
@@ -20,7 +20,7 @@ You might also want to explore [Serenity/JS example projects on GitHub](https://
 
 ## Integration
 
-[`StreamReporter`](/api/core/class/StreamReporter) listens to all the [domain events](/handbook/reporting/domain-events) emitted by [`Actors`](/api/core/class/Actor)
+[`StreamReporter`](/api/core/class/StreamReporter) listens to all the [domain events](/handbook/reporting/domain-events) emitted by [actors](/api/core/class/Actor)
 and [Serenity/JS test runner adapters](/handbook/test-runners/).
 
 Next, it streams them to a [`Writable`](https://nodejs.org/docs/latest-v14.x/api/stream.html#stream_writable_streams) stream,
