--- a/documentation/serenity-js.org/docs/web-testing/index.mdx
+++ b/documentation/serenity-js.org/docs/web-testing/index.mdx
@@ -8,4 +8,9 @@ title: Web testing
 import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
 ```
 
+Key points:
+- web abstraction enables portability, while allowing you to use low-level APIs if needed
+- PEQL provides abstraction on top of selectors
+- you can extend Serenity/JS by writing your own interactions, or even entire integration modules
+
 <ArticleComingSoon />
