--- a/documentation/serenity-js.org/docs/web-testing/waiting-and-synchronisation.mdx
+++ b/documentation/serenity-js.org/docs/web-testing/waiting-and-synchronisation.mdx
@@ -1,8 +1,8 @@
 ---
-sidebar_position: 3
+sidebar_position: 4
 ---
 
-# Serenity/JS web Modules
+# Waiting and synchronisation
 
 ```mdx-code-block
 import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
