docs(website): first part of the article on the Page Element Query Language

--- a/documentation/serenity-js.org/docs/index.mdx
+++ b/documentation/serenity-js.org/docs/index.mdx
@@ -12,9 +12,9 @@ and **prove** that your system **meets** and **continues to meet** its **require
 To help you achieve that, Serenity/JS enables you to:
 - Follow the [**Serenity/JS Screenplay Pattern**](/handbook/design/screenplay-pattern) to define your own **domain-specific test language**
   that everyone on your team can read, understand, and reason about - including your business sponsors and domain experts.
-- Create **single- and multi-actor test scenarios** that interact with [**any interface of your system**](/handbook/design/modular-architecture)
+- Create **single- and multi-actor test scenarios** that interact with [**any interface of your system**](/handbook/design/modular-architecture),
   so that you're not limited to end-to-end testing.
-- Turn your test automation code into **test automation libraries** that are easy to [**share across projects and teams**](/handbook/design/reusable-test-code)
+- Turn your test automation code into **test automation libraries** that are easy to [**share across projects and teams**](/handbook/design/reusable-test-code),
   so that your whole company can benefit from your automation work and avoid code duplication and wasted effort.
 - Support **Continuous Integration**, **Testing**, and **Delivery**, so that your automated tests are as easy to ru on your machine as they are as part of your [CI/CD pipelines](/handbook/integration/).
 - **Abstract away** the low-level implementation details and **use the same consistent API** to [**develop portable web tests**](/handbook/web-testing/) that work just as well with **remote Selenium grids** as with local **Playwright** or **Puppeteer** installations.
