--- a/documentation/serenity-js.org/docs/integration/jira-and-other-issue-trackers.mdx
+++ b/documentation/serenity-js.org/docs/integration/jira-and-other-issue-trackers.mdx
@@ -114,14 +114,14 @@ To instruct Serenity BDD where your Jira instance is, provide the `--jiraUrl` ar
 [generating the report](/api/serenity-bdd) from the command line:
 
 ```bash
-npx serenity-bdd run --jiraUrl=https://jira.atlassian.com
+npx serenity-bdd run --jiraUrl=https://my-company.atlassian.net
 ```
 
 Alternatively, you can specify the [`jira.url`](https://serenity-bdd.github.io/docs/reference/serenity-properties#jiraurl) property in your [`serenity.properties`](https://serenity-bdd.github.io/docs/reference/serenity-properties#jiraurl) file,
 which Serenity BDD will pick up automatically when executed:
 
 ```properties title="serenity.properties"
-jira.url=https://jira.atlassian.com
+jira.url=https://my-company.atlassian.net
 ```
 
 ## Working with GitHub and Gitlab
