--- a/documentation/serenity-js.org/docs/web-testing/your-first-web-scenario.mdx
+++ b/documentation/serenity-js.org/docs/web-testing/your-first-web-scenario.mdx
@@ -8,6 +8,37 @@ sidebar_position: 1
 import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
 ```
 
+<ArticleComingSoon />
+
+Key points:
+
+## Using Serenity/JS GitPods
+
+If you'd like to save your changes, make a fork and launch a GitPod from the readme.
+
+If you want to do a quick experiment, click o open in GitPod:
 [![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)](https://gitpod.io/#https://github.com/serenity-js/serenity-js-playwright-test-template)
 
-<ArticleComingSoon />
+Todo:
+- [ ] in playwright template, add a getting_started.spec.ts
+    - [ ] it('debugs')
+    - [ ] it('fails')       ?
+    - [ ] it('is empty')
+
+## Viewing reports
+
+## Running tests
+
+Run one of the existing tests
+
+## Debugging tests
+
+Add a debug statement
+open VNC
+run in debug mode
+
+## Writing tests
+
+## Configuring test runner
+
+[Configure Playwright Test](/handbook/test-runners/playwright-test)
