--- a/documentation/serenity-js.org/docs/web-testing/index.mdx
+++ b/documentation/serenity-js.org/docs/web-testing/index.mdx
@@ -4,13 +4,12 @@ title: Web testing
 ---
 # Web testing
 
-```mdx-code-block
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
-```
+[**Serenity/JS web module**](`@serenity-js/web`) is an abstraction layer on top of popular web integration tools like [WebdriverIO](/api/webdriverio), [Playwright](/api/playwrigth), or [Protractor](/api/protractor).
+It helps you create **portable test code libraries** that interact with web-based interfaces and can be shared and reused across projects and teams.
 
-Key points:
-- web abstraction enables portability, while allowing you to use low-level APIs if needed
-- PEQL provides abstraction on top of selectors
-- you can extend Serenity/JS by writing your own interactions, or even entire integration modules
+To help you achieve this flexibility, Serenity/JS web module offers several key features:
+- [**Portable interaction APIs**](/api/web) - a library of [Screenplay Pattern](/handbook/design/screenplay-pattern)-compatible _interactions_, _questions_, and _models_ that work the same way across all the supported web integration tools
+- [**Page Element Query Language**](/handbook/web-testing/page-element-query-language) - a portable, composable, and type-safe abstraction around low-level tool-specific selectors
+- [**Web-first assertions**](/handbook/web-testing/web-first-assertions) and [**synchronisation**](/handbook/web-testing/waiting-and-synchronisation) - a library of _expectations_ to help you implement web-first assertions, as well as conditional logic and synchronisation
 
-<ArticleComingSoon />
+The best way to experience working with the Serenity/JS web module is by using it, which is what I'm going to show you next!
