--- a/documentation/serenity-js.org/docs/web-testing/page-objects-pattern.mdx
+++ b/documentation/serenity-js.org/docs/web-testing/page-objects-pattern.mdx
@@ -1,8 +1,8 @@
 ---
-sidebar_position: 1
+sidebar_position: 5
 ---
 
-# Your first mobile scenario
+# Page Objects Pattern
 
 ```mdx-code-block
 import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
