--- a/documentation/serenity-js.org/docs/web-testing/serenity-js-web-modules.mdx
+++ b/documentation/serenity-js.org/docs/web-testing/serenity-js-web-modules.mdx
@@ -1,8 +1,8 @@
 ---
-sidebar_position: 3
+sidebar_position: 6
 ---
 
-# Serenity/JS web Modules
+# Serenity/JS web modules
 
 ```mdx-code-block
 import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
