docs(website): corrected links

--- a/documentation/serenity-js.org/docs/web-testing/index.mdx
+++ b/documentation/serenity-js.org/docs/web-testing/index.mdx
@@ -4,7 +4,7 @@ title: Web testing
 ---
 # Web testing
 
-[**Serenity/JS web module**](`@serenity-js/web`) is an abstraction layer on top of popular web integration tools like [WebdriverIO](/api/webdriverio), [Playwright](/api/playwrigth), or [Protractor](/api/protractor).
+[**Serenity/JS web module**](/api/web) is an abstraction layer on top of popular web integration tools like [WebdriverIO](/api/webdriverio), [Playwright](/api/playwright), or [Protractor](/api/protractor).
 It helps you create **portable test code libraries** that interact with web-based interfaces and can be shared and reused across projects and teams.
 
 To help you achieve this flexibility, Serenity/JS web module offers several key features:
