--- a/documentation/serenity-js.org/docs/web-testing/page-element-query-language.mdx
+++ b/documentation/serenity-js.org/docs/web-testing/page-element-query-language.mdx
@@ -20,7 +20,7 @@ Key points:
 
 **Page Element Query Language (PEQL)** is a portable, composable, and type-safe abstraction layer
 around selectors and web element interaction methods provided by web integration tools like
-[WebdriverIO](/api/webdriverio), [Playwright](/api/playwrigth), or [Protractor](/api/protractor).
+[WebdriverIO](/api/webdriverio), [Playwright](/api/playwright), or [Protractor](/api/protractor).
 
 **<abbr title="Page Element Query Language">PEQL</abbr>** leverages Serenity/JS [expectations library](/api/web/class/ElementExpectation)
 and [meta-questions](/api/core/interface/MetaQuestion) to give you
@@ -65,7 +65,7 @@ const articleTitle = () =>
 Standardising on using functions or methods makes it easier for you to refactor them to accept parameters later on if needed.
 
 :::info Pro tip
-You can learn more about organising your page elements in the chapter on the "[Page Objects Pattern](/handbook/web-testing/page-elements-pattern)"
+You can learn more about organising your page elements in the chapter on the "[Page Objects Pattern](/handbook/web-testing/page-objects-pattern)"
 :::
 
 ### Customising page element description
