--- a/documentation/serenity-js.org/docs/web-testing/page-element-query-language.mdx
+++ b/documentation/serenity-js.org/docs/web-testing/page-element-query-language.mdx
@@ -15,7 +15,7 @@ Key points:
 - **[`PageElement`](/api/web/class/PageElement)** represents
   a [single element](/handbook/web-testing/page-element-query-language#working-with-a-single-page-element)
   and **[`PageElements`](/api/web/class/PageElements)** represent a [collection of elements](/handbook/web-testing/page-element-query-language#working-with-a-collection-of-page-elements)
-- **[`By` selectors](/api/web/class/By)** help to identify page elements of interest
+- **[`By` selectors](/api/web/class/By)** help you identify page elements of interest
 - [**<abbr title="Page Element Query Language">PEQL</abbr>**](/handbook/web-testing/page-element-query-language#querying-elements) leverages [expectations](/api/web/class/ElementExpectation) and [meta-questions](/api/core/interface/MetaQuestion) (just like [assertions](/handbook/web-testing/web-first-assertions) and [synchronisation statements](/handbook/web-testing/web-first-assertions))
 
 **Page Element Query Language (PEQL)** is a portable, composable, and type-safe abstraction layer
@@ -71,7 +71,7 @@ You can learn more about organising your page elements in the chapter on the "[P
 ### Customising page element description
 
 [`PageElement`](/api/web/class/PageElement) is an implementation of a [`Question`](/api/core/class/Question), which means you can
-customise its description to improve how Serenity/JS reports interactions with the given element:
+customise its description to improve how Serenity/JS reports interactions with it:
 
 ```typescript
 import { By, PageElement } from '@serenity-js/web'
@@ -83,8 +83,8 @@ const articleTitle = () =>
 
 When a custom description is provided, Serenity/JS will use it instead of the default one:
 ```diff
-+ article title
-- PageElement located by css (article > .title)
+- PageElement located by css (article > .title)     // default description
++ article title                                     // custom description
 ```
 
 The practical advantage of using custom descriptions is that once Serenity/JS understands
@@ -100,11 +100,12 @@ await actorCalled('Alice').attemptsTo(
     Ensure.that(Text.of(articleTitle()), equals('Serenity/JS'))
 )
 ```
+For example, thanks to the custom description, the above interaction will be reported as follows:
 ```
 Alice ensures that the text of article title does equal "Serenity/JS"
 ```
-Of course, if the element is not found or can't be interacted with, Serenity/JS reports the selector used
-to make debugging test failures easier.
+Of course, if the element is not found or can't be interacted with, Serenity/JS will also report
+the selector used to locate the element to make debugging test failures easier.
 
 
 ### Composing questions
@@ -122,12 +123,15 @@ const articleTitleText = () =>
     Text.of(articleTitle())
 ```
 
-Note that the **result of composing questions is also a question**, which means that it can be composed further, or resolved by an [_actor_](/handbook/design/screenplay-pattern).
+:::info Pro Tip
+Note that the result of **composing questions** is also a **question**.
+This design makes questions reusable and allows for them to be composed further, until they're finally resolved by an [_actor_](/handbook/design/screenplay-pattern).
+:::
 
 ### Asserting on a page element
 
 Serenity/JS web module provides [web-specific expectations](/api/web/class/ElementExpectation) you use
-to verify if the actual state of the given element meets your expectations.
+to verify if the actual state of the given element is what you expect it to be.
 
 For example, you might want to ensure that a given element [is visible](/api/web/function/isVisible), i.e. not obstructed by other elements:
 
@@ -141,7 +145,7 @@ await actorCalled('Alice').attemptsTo(
 )
 ```
 
-You can also assert on a specific property of the element, like its [text](/api/web/class/Text):
+You can also assert that a specific property of the element, like its [text](/api/web/class/Text), to have a certain value:
 
 ```typescript
 import { actorCalled } from '@serenity-js/core'
@@ -176,7 +180,7 @@ await actorCalled('Alice').attemptsTo(
 )
 ```
 
-You can also wait for a specific property of the element, like its [text](/api/web/class/Text):
+You can also wait for a specific property of the element, like its [text](/api/web/class/Text), to have a certain value:
 
 ```typescript
 import { actorCalled, Wait } from '@serenity-js/core'
@@ -195,7 +199,7 @@ any other expectations from the [Serenity/JS assertions module](/api/assertions)
 Learn more about synchronising your web tests with the system under test in chapter "[Waiting and synchronisation](/handbook/web-testing/waiting-and-synchronisation)".
 :::
 
-### Using selectors aliases
+### Using selector aliases
 
 In scenarios where different elements can be identified using a similar selector pattern you might want to implement
 custom selector aliases to avoid code duplication.
@@ -220,8 +224,8 @@ await actorCalled('Alice').attemptsTo(
 In some scenarios, the exact value of the selector you need to use becomes known only at runtime.
 This is typically the case when element attributes are calculated dynamically based on user actions.
 
-To cater for that, all f [`By` selectors](/api/web/class/By) let you define
-selector value as [`Answerable<string>`](/api/core#Answerable), which you'll typically use with [`q`](/api/core/function/q):
+To cater for that, all [`By` selectors](/api/web/class/By) let you define
+selector value using an [`Answerable<string>`](/api/core#Answerable):
 
 ```typescript
 import { Answerable, q } from '@serenity-js/core'
@@ -231,9 +235,11 @@ const byTestId = (dataTestId: Answerable<string>) =>
     PageElement.located(By.css(q`[data-test-id="${ dataTestId }"]`))
 ```
 
-### Using meta questions
+Note that the example above uses [tag function `q`](/api/core/function/q) to concatenate a static string with an `Answerable<string>`.
 
-`PageElement` is a [`MetaQuestion`](/api/core/interface/MetaQuestion) and can be resolved _in relation_ to another `Question`.
+### Using meta-questions
+
+`PageElement` is a [`meta-question`](/api/core/interface/MetaQuestion) that can be resolved _in relation_ to another `Question`.
 
 What this means in this context is that you can define a `PageElement` as having a child-parent relationship with another `PageElement`,
 and do it either dynamically or statically using the [`PageElement#of`](/api/web/class/PageElement#of) API.
@@ -264,7 +270,7 @@ const summary = () =>
 ```
 
 Now, since both the article and its summary have a title identified by a CSS class called `.title`, we can define
-a page element to represent it:
+a third page element to represent it:
 
 ```typescript
 const title = () =>
@@ -286,14 +292,16 @@ await actorCalled('Alice').attemptsTo(
 ```
 
 :::info Pro tip
-Using meta questions to enable page element reuse is particularly useful when the system under test
-uses a consistent convention to name element identifiers.
+Using meta questions to enable page element reuse can be a great productivity boost that is most effective
+when the system under test uses a consistent convention to name element identifiers and classes.
+This is typically the case when you use a good web UI design system and a consistent UI component library.
 :::
 
 ## Working with a collection of page elements
 
 [`PageElements`](/api/web/class/PageElements) class is a [Screenplay Pattern](/handbook/design/screenplay-pattern)-compatible
-abstraction that represents a collection of [element](https://developer.mozilla.org/en-US/docs/Glossary/Element) in a web interface.
+abstraction that represents a collection of [elements](https://developer.mozilla.org/en-US/docs/Glossary/Element) in a web interface
+that share some common characteristics.
 
 To help you understand how to use this abstraction, consider the below shopping list widget, which we'll use in the next few examples:
 
@@ -305,31 +313,343 @@ To help you understand how to use this abstraction, consider the below shopping 
 </ul>
 ```
 
+### Representing a collection of page elements
+
+Use [`PageElements.located`](/api/web/class/PageElements#located) API to represent a collection of page elements
+and one of the built-in [`By` selectors](/api/web/class/By) to instruct the browser how to locate them.
+
+For example, to represent all the shopping list items from the [example above](#working-with-a-collection-of-page-elements),
+you could use the following reusable function named after the elements it represents:
 
 ```typescript
-class ShoppingList {
-    static component = () =>
-        PageElement.located(By.css('ul'))
-            .describedAs('shopping list');
+import { By, PageElements } from '@serenity-js/web'
 
-    static items = () =>
-        PageElements.located(By.css('li'))
-            .describedAs('items')
-            .of(ShoppingList.component());
-
-    static boughtItems = () =>
-        PageElements.located(By.css('.bought'))
-            .describedAs('bought items')
-            .of(ShoppingList.component());
-}
+const shoppingListItems = () =>
+    PageElements.located(By.css('li'))
 ```
 
-<ArticleComingSoon />
+### Retrieving a specific element from a collection
 
+If you need to retrieve a specific element from a collection, and you know what position it occupies, you can use
+[`PageElements#first()`](/api/web/class/PageElements#first), [`PageElements#last()`](/api/web/class/PageElements#last), and [`PageElements#nth(index)`](/api/web/class/PageElements#nth) APIs:
 
+```typescript
+import { By, PageElements } from '@serenity-js/web'
 
-### Querying elements
+const firstItem = () =>
+    PageElements.located(By.css('li'))
+        .first()
 
-### Mapping elements
+const secondItem = () =>
+    PageElements.located(By.css('li'))
+        .nth(1) // notice zero-based indexing
+
+const lastItem = () =>
+    PageElements.located(By.css('li'))
+        .first()
+```
+
+Above APIs are particularly useful when you need to retrieve elements from a sorted collection, e.g. the most recent comment, last order, nth position from a league table, and so on.
+
+### Customising page elements description
+
+Just like [`PageElement`](/api/web/class/PageElement), [`PageElements`](/api/web/class/PageElements) class is also an implementation of a [`Question`](/api/core/class/Question).
+This means you can customise its description to improve how Serenity/JS reports interactions with the given collection of page elements:
+
+```typescript
+import { By, PageElements } from '@serenity-js/web'
+
+const shoppingListItems = () =>
+    PageElements.located(By.css('li'))
+        .describedAs('shopping list items');
+```
+
+### Composing questions
+
+Similarly to [`PageElement`](/api/web/class/PageElement), [`PageElements`](/api/web/class/PageElements) can be composed with other questions,
+like [`Text.ofAll`](/api/web/class/Text), to retrieve aggregate information about all the elements in the collection:
+
+```typescript
+import { Text } from '@serenity-js/web'
+
+const namesOfShoppingListItems = () =>
+    Text.ofAll(shoppingListItems())
+```
+
+[`Text.ofAll`](/api/web/class/Text) API is particularly useful when you need to retrieve text content of multiple elements and assert on it all at once:
+
+```typescript
+import { actorCalled } from '@serenity-js/core'
+import { Ensure, equals } from '@serenity-js/assertions'
+import { Text } from '@serenity-js/web'
+
+await actorCalled('Alice').attemptsTo(
+    Ensure.that(Text.ofAll(shoppingListItems()), equals([
+        'oats',
+        'coconut milk',
+        'coffee'
+    ]))
+)
+```
+
+### Mapping page elements in a collection
+
+Just like with using [functional composition](https://en.wikipedia.org/wiki/Function_composition_(computer_science))
+and [meta-questions](/api/core/interface/MetaQuestion)
+to map an individual element to [another type](#composing-questions) or [another element](#using-meta-questions),
+you can map each element in a collection of page elements. To do that, use the [`PageElements#mapEachElementTo`](/api/web/class/PageElements#eachMappedTo) API.
+
+For example, you could map each [shopping list item element](#working-with-a-collection-of-page-elements) to its text content using the [`Text`](/api/web/class/Text) meta-question:
+
+```typescript
+import { actorCalled } from '@serenity-js/core'
+import { Ensure, equals } from '@serenity-js/assertions'
+import { Text } from '@serenity-js/web'
+
+await actorCalled('Alice').attemptsTo(
+    Ensure.that(
+        shoppingListItems().eachMappedTo(Text),
+        equals([
+            'oats',
+            'coconut milk',
+            'coffee'
+        ])
+    )
+)
+```
+
+You could also retrieve the [`CssClasses`](/api/web/class/CssClasses) of each element:
+
+```typescript
+import { actorCalled } from '@serenity-js/core'
+import { Ensure, equals } from '@serenity-js/assertions'
+import { CssClasses } from '@serenity-js/web'
+
+await actorCalled('Alice').attemptsTo(
+    Ensure.that(
+        shoppingListItems().eachMappedTo(CssClasses),
+        equals([
+            [ 'buy' ],
+            [ 'buy' ],
+            [ 'bought' ],
+        ])
+    )
+)
+```
+
+You could also use any other of the built-in meta-questions, like [`Attribute.called('name')`](/api/web/class/Attribute) or [`Value`](/api/web/class/Value).
+You could also create your own [meta-questions](/api/core/interface/MetaQuestion) if needed.
+
+### Filtering page elements in a collection
+
+While Serenity/JS [expectations](/api/web/class/ElementExpectation) are most commonly used in [assertion](#asserting-on-a-page-element) and [synchronisation](#waiting-for-a-page-element) statements,
+when used with [`PageElements#where`](/api/web/class/PageElements#where) API they can offer a great and reusable alternative to complex CSS selectors and XPath expressions.
+
+For example, you could use the [meta-question](/api/core/interface/MetaQuestion) about the [`CssClasses`](/api/web/class/CssClasses) and an expectation to [`contain`](/api/assertions/function/contain)
+to find only those items that still need to be bought:
+
+```typescript
+import { By, CssClasses, PageElements } from '@serenity-js/web'
+import { contain } from '@serenity-js/assertions'
+
+const boughtItems = () =>
+    PageElements.located(By.css('li'))
+        .where(CssClasses, contain('bought'))
+        .describedAs('bought items')
+```
+
+Furthermore, you can chain multiple filter statements together. For example, you might want to retrieve only those
+elements that [include](/api/assertions/function/includes) sub-string "co" ("coffee" and "coconut milk"), and of them only those that have already been marked as "bought":
+
+```typescript
+import { By, CssClasses, PageElements } from '@serenity-js/web'
+import { contain, includes } from '@serenity-js/assertions'
+
+const myItems = () =>
+    PageElements.located(By.css('li'))
+        .where(Text, includes('co'))
+        .where(CssClasses, contain('bought'))
+```
+
+## Combining mapping, composition, and filtering
+
+Serenity/JS mapping, composition, and filtering features become very useful when you learn how to use them together.
+
+Consider the following, slightly more sophisticated shopping list widget, which we'll use to demonstrate
+some more advanced <abbr title="Page Element Query Language">PEQL</abbr> features in the next few examples:
+
+```html
+<ul class="shopping-list">
+    <li class="item buy">
+        <input type="checkbox" class="toggle">
+        <label>oats</label>
+        <span class="quantity">1</span>
+        <button class="destroy">X</button>
+    </li>
+    <li class="item buy">
+        <input type="checkbox" class="toggle">
+        <label>coconut milk</label>
+        <span class="quantity">2</span>
+        <button class="destroy">X</button>
+    </li>
+    <li class="item bought">
+        <input type="checkbox" class="toggle">
+        <label>coffee</label>
+        <span class="quantity">1</span>
+        <button class="destroy">X</button>
+    </li>
+</ul>
+```
+
+In contrast to the [original example](#working-with-a-collection-of-page-elements),
+we can no longer verify what items are displayed by simply fetching the text content of each `li` node.
+That's because doing so would also include the information about their quantity and the label of the "destroy" button, which means we'd end up with a result like this:
+```
+oats 1 X
+coconu milk 2 X
+coffee 1 X
+```
+
+A better approach is to introduce page elements representing:
+- a collection of shopping list items
+- interactive elements of each shopping list item, so:
+    - a checkbox
+    - a label
+    - a quantity
+    - a destroy button
+
+```typescript
+import { By, PageElements } from '@serenity-js/web'
+
+const shoppingListItems = () =>
+    PageElements.located(By.css('li.todo'))
+        .describedAs('shopping list items')
+
+const checkbox = () =>
+    PageElements.located(By.css('input.checkbox')).describedAs('checkbox')
+
+const label = () =>
+    PageElements.located(By.css('label')).describedAs('label')
+
+const quantity = () =>
+    PageElements.located(By.css('span.quantity')).describedAs('quantity')
+
+const destroyButton = () =>
+    PageElements.located(By.css('button.destroy')).describedAs('destroy button')
+```
+
+### Mapping elements in a collection using meta-questions
+
+To retrieve the text of all the labels of the displayed shopping list items, you could map a collection of shopping list items
+to their labels, and then retrieve text of all the items:
+
+```typescript
+import { actorCalled } from '@serenity-js/core'
+import { Text } from '@serenity-js/web'
+import { Ensure, equals } from '@serenity-js/assertions'
+
+const labels = () =>
+    shoppingListItems()
+        .eachMappedTo(label())
+
+await actorCalled('Alice').attemptsTo(
+    Ensure.that(Text.ofAll(labels()), equals([
+        'oats',
+        'coconut milk',
+        'coffee',
+    ]))
+)
+```
+
+### Mapping elements in a collection using partially-applied meta-questions
+
+There's another way to retrieve the text of all the labels, apart from mapping each element in a collection to its label element, and then retrieving text content of all the results like we did in the [previous example](#mapping-elements-in-a-collection-using-meta-questions).
+
+What you could do, is use partially-applied meta-question `Text.of(label())` to map each page element directly to text of its label:
+
+```typescript
+import { actorCalled } from '@serenity-js/core'
+import { Text } from '@serenity-js/web'
+import { Ensure, equals } from '@serenity-js/assertions'
+
+const labels = () =>
+    shoppingListItems()
+        .eachMappedTo(Text.of(label()))
+
+await actorCalled('Alice').attemptsTo(
+    Ensure.that(labels(), equals([
+        'oats',
+        'coconut milk',
+        'coffee',
+    ]))
+)
+```
+
+:::info Partially-applied meta-questions
+A meta-question is a type that implements the [`MetaQuestion`](/api/core/interface/MetaQuestion) interface. However, a meta-question could be either a [class](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Classes), or an instance of a class.
+A class would have a static method [`of`](/api/core/interface/MetaQuestion#of) returning a `Question<Result_Type>`, and an instance would have an equivalent instance method.
+
+A good example of a meta-question is [`Text`](/api/web/class/Text). `Text` is a class with a static method [`of`](/api/web/class/Text#of) that accepts a [`PageElement`](/api/web/class/PageElement) and returns a `Question` that resolves to text content of the provided page element.
+
+You can use `Text` to return text content of a page element of interest:
+```typescript
+Text.of(label())
+```
+
+Interestingly, though, the type returned by [`Text.of(element)`](/api/web/class/Text#of) is _also_ a meta-question, making it a [partially-applied](https://en.wikipedia.org/wiki/Partial_application) meta-question.
+This means that you can use this [double-dispatch mechanism](https://en.wikipedia.org/wiki/Double_dispatch) to describe a child-parent relationship between the label, which text we're returning, and its container:
+
+```typescript
+const shoppingListItem = () =>
+    PageElement.located(By.css('li.todo'))
+
+Text.of(label()).of(shoppingListItem())
+```
+
+This is particularly important in filtering a collection of page elements based on properties of their child-elements, as you'll see in the next section.
+:::
+
+### Filtering a collection using partially-applied meta-questions
+
+You can use partially-applied [meta-questions](/api/core/interface/MetaQuestion) like `Text.of(label())` to filter the list of shopping list items
+to only those elements that meet your [expectations](/api/web/class/ElementExpectation):
+
+```typescript
+import { actorCalled } from '@serenity-js/core'
+import { CssClasses, Text } from '@serenity-js/web'
+import { Ensure, equals, includes } from '@serenity-js/assertions'
+
+const firstBought = () =>
+    shoppingListItems()
+        .where(Text.of(label()), includes('co'))    // 'coffee' and 'coconut milk'
+        .where(CssClasses, contain('bought'))       // 'coffee'
+        .first()
+
+await actorCalled('Alice').attemptsTo(
+    Ensure.that(Text.of(firstBought()), equals('coffee'))
+)
+```
 
 ### Iterating over elements
+
+[`PageElements#forEach`](/api/web/class/PageElements#forEach) API allows you to perform a sequence of interactions
+with each element of the collection.
+
+For example, to remove every already bought item from the list:
+
+```typescript
+import { actorCalled } from '@serenity-js/core'
+import { Click, CssClasses } from '@serenity-js/web'
+
+const boughtItems = () =>
+    shoppingListItems()
+        .where(CssClasses, contain('bought'))
+
+await actorCalled('Alice').attemptsTo(
+    boughtItems().forEach(({ item, actor }) =>  // note `actor`
+        actor.attemptsTo(
+            Click.on(destroyButton().of(item)),
+        )
+    )
+)
+```
